--- a/ui/package.json
+++ b/ui/package.json
@@ -20,7 +20,8 @@
     "prop-types": "^15.6.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "react-rnd": "^7.1.5"
   },
   "scripts": {
     "start": "react-scripts-ts start",
